// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deps upgrade commit can be signed 1`] = `
Object {
  "if": "\${{ needs.upgrade.outputs.patch_created }}",
  "name": "Create Pull Request",
  "needs": "upgrade",
  "permissions": Object {
    "contents": "write",
    "pull-requests": "write",
  },
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "name": "Checkout",
      "uses": "actions/checkout@v2",
      "with": Object {
        "ref": "main",
        "token": "\${{ secrets.PROJEN_GITHUB_TOKEN }}",
      },
    },
    Object {
      "name": "Download patch",
      "uses": "actions/download-artifact@v2",
      "with": Object {
        "name": ".repo.patch",
        "path": "\${{ runner.temp }}",
      },
    },
    Object {
      "name": "Apply patch",
      "run": "[ -s \${{ runner.temp }}/.repo.patch ] && git apply \${{ runner.temp }}/.repo.patch || echo \\"Empty patch. Skipping.\\"",
    },
    Object {
      "name": "Set git identity",
      "run": "git config user.name \\"github-actions\\"
git config user.email \\"github-actions@github.com\\"",
    },
    Object {
      "id": "create-pr",
      "name": "Create Pull Request",
      "uses": "peter-evans/create-pull-request@v3",
      "with": Object {
        "author": "github-actions <github-actions@github.com>",
        "body": "Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

------

*Automatically created by projen via the \\"upgrade-main\\" workflow*",
        "branch": "github-actions/upgrade-main",
        "commit-message": "chore(deps): upgrade dependencies

Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

------

*Automatically created by projen via the \\"upgrade-main\\" workflow*",
        "committer": "github-actions <github-actions@github.com>",
        "signoff": true,
        "title": "chore(deps): upgrade dependencies",
        "token": "\${{ secrets.PROJEN_GITHUB_TOKEN }}",
      },
    },
  ],
}
`;

exports[`disabling mutableBuild will skip pushing changes to PR branches 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v2",
    "with": Object {
      "ref": "\${{ github.event.pull_request.head.ref }}",
      "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --check-files",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
  Object {
    "id": "self_mutation",
    "name": "Find mutations",
    "run": "git add .
git diff --staged --patch --exit-code > .repo.patch || echo \\"::set-output name=self_mutation_happened::true\\"",
  },
  Object {
    "if": "steps.self_mutation.outputs.self_mutation_happened",
    "name": "Upload patch",
    "uses": "actions/upload-artifact@v2",
    "with": Object {
      "name": ".repo.patch",
      "path": ".repo.patch",
    },
  },
  Object {
    "if": "steps.self_mutation.outputs.self_mutation_happened",
    "name": "Fail build on mutation",
    "run": "echo \\"::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch.\\"
cat .repo.patch
exit 1",
  },
]
`;

exports[`mutableBuild will push changes to PR branches 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v2",
    "with": Object {
      "ref": "\${{ github.event.pull_request.head.ref }}",
      "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --check-files",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
  Object {
    "id": "self_mutation",
    "name": "Find mutations",
    "run": "git add .
git diff --staged --patch --exit-code > .repo.patch || echo \\"::set-output name=self_mutation_happened::true\\"",
  },
  Object {
    "if": "steps.self_mutation.outputs.self_mutation_happened",
    "name": "Upload patch",
    "uses": "actions/upload-artifact@v2",
    "with": Object {
      "name": ".repo.patch",
      "path": ".repo.patch",
    },
  },
  Object {
    "if": "steps.self_mutation.outputs.self_mutation_happened",
    "name": "Fail build on mutation",
    "run": "echo \\"::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch.\\"
cat .repo.patch
exit 1",
  },
]
`;

exports[`mutableBuild will push changes to PR branches 2`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v2",
    "with": Object {
      "ref": "\${{ github.event.pull_request.head.ref }}",
      "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
      "token": "\${{ secrets.PROJEN_GITHUB_TOKEN }}",
    },
  },
  Object {
    "name": "Download patch",
    "uses": "actions/download-artifact@v2",
    "with": Object {
      "name": ".repo.patch",
      "path": "\${{ runner.temp }}",
    },
  },
  Object {
    "name": "Apply patch",
    "run": "[ -s \${{ runner.temp }}/.repo.patch ] && git apply \${{ runner.temp }}/.repo.patch || echo \\"Empty patch. Skipping.\\"",
  },
  Object {
    "name": "Set git identity",
    "run": "git config user.name \\"github-actions\\"
git config user.email \\"github-actions@github.com\\"",
  },
  Object {
    "name": "Push changes",
    "run": "  git add .
  git commit -s -m \\"chore: self mutation\\"
  git push origin HEAD:\${{ github.event.pull_request.head.ref }}",
  },
]
`;
